--- a/index.html
+++ b/index.html
@@ -431,6 +431,7 @@
         <div class="row">
 
             <div class="copyrightDiv col-12 col-sm-12 col-md-12 col-lg-12" style="text-align: center;">
+                 <p Thank you for visiting my personal portfolio website. Connect with me over socials. </p>
                 <p id="copyright">&copy;By Sunil Pratap</p>
                 <div id="up" class="up">
                     <i class="fas fa-chevron-up"></i>
