--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <img id="myPic" src="images/about/me.jpg" alt="">
                 </div>
                 <div class="col-12 col-sm-12 col-lg-5 col-xl-5 nameBtn">
-                    <h1 class="name" id="name">SUNIL PRATHAP</h1>
+                    <h1 class="name" id="name">SUNIL PRATAP</h1>
                     <a href="https://drive.google.com/file/d/1L1PDctZ-JRbDu9roXb42TT__W4wyfBQv/view?usp=sharing" download="hamza_resume.pdf"
                         class="btn btn-primary downloadBtn">Download
                         Resume <i class="fa fa-download" aria-hidden="true"></i></a>
@@ -301,7 +301,7 @@
                     class="col-sm-10 col-md-10 col-lg-3 col-xl-3 offerType shadow p-3 mb-5 bg-white rounded">
                     <img id="offerImg" src="images/about/aditya.png">
                     <h5 id="offerName">B.TECH</h5>
-                    <h5 id="offerName">Aditya college of engineering and technology(surempalem)</h5>
+                    <h5 id="offerName">Aditya college of engineering and technology(surampalem)</h5>
 
                 </div>
 
