--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     class="col-sm-10 col-md-10 col-lg-3 col-xl-3 other offerType shadow p-3 mb-5 bg-white rounded">
                     <img id="offerImg" src="images/about/ard.png">
                     <h5 id="offerName">ARDUINO</h5>
-                    <a href="images/about/hamza_resume.pdf" download="hamza_resume.pdf"
+                    <a href="https://drive.google.com/file/d/1mvQ15uLSIzvU0nPI2A71BFPin5c6ElHB/view?usp=sharing" download="hamza_resume.pdf"
                         class="btn btn-primary downloadBtn">Look here <i class="fa fa-download" aria-hidden="true"></i></a>
                 </div>
 
@@ -190,7 +190,7 @@
                     class="col-sm-10 col-md-10 col-lg-3 col-xl-3 offerType shadow p-3 mb-5 bg-white rounded">
                     <img id="offerImg" src="images/about/py.png">
                     <h5 id="offerName">PYTHON</h5>
-                    <a href="images/about/hamza_resume.pdf" download="hamza_resume.pdf"
+                    <a href="https://drive.google.com/file/d/1cEIEzX1DQd370EdXrFGFSW6cRKD0Rg7G/view?usp=sharing" download="hamza_resume.pdf"
                         class="btn btn-primary downloadBtn">Look here <i class="fa fa-download" aria-hidden="true"></i></a>
                 </div>
 
