--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </div>
                 <div class="col-12 col-sm-12 col-lg-5 col-xl-5 nameBtn">
                     <h1 class="name" id="name">SUNIL PRATAP</h1>
-                    <a href="https://drive.google.com/file/d/1L1PDctZ-JRbDu9roXb42TT__W4wyfBQv/view?usp=sharing" download="hamza_resume.pdf"
+                    <a href="https://drive.google.com/file/d/1L1PDctZ-JRbDu9roXb42TT__W4wyfBQv/view?usp=sharing" download="sunil_pratap_resume.pdf"
                         class="btn btn-primary downloadBtn">Download
                         Resume <i class="fa fa-download" aria-hidden="true"></i></a>
                 </div>
@@ -180,7 +180,7 @@
                     class="col-sm-10 col-md-10 col-lg-3 col-xl-3 other offerType shadow p-3 mb-5 bg-white rounded">
                     <img id="offerImg" src="images/about/ard.png">
                     <h5 id="offerName">ARDUINO</h5>
-                    <a href="https://drive.google.com/file/d/1mvQ15uLSIzvU0nPI2A71BFPin5c6ElHB/view?usp=sharing" download="hamza_resume.pdf"
+                    <a href="https://drive.google.com/file/d/1mvQ15uLSIzvU0nPI2A71BFPin5c6ElHB/view?usp=sharing" download="arduino.pdf"
                         class="btn btn-primary downloadBtn">Look here <i class="fa fa-download" aria-hidden="true"></i></a>
                 </div>
 
@@ -190,7 +190,7 @@
                     class="col-sm-10 col-md-10 col-lg-3 col-xl-3 offerType shadow p-3 mb-5 bg-white rounded">
                     <img id="offerImg" src="images/about/py.png">
                     <h5 id="offerName">PYTHON</h5>
-                    <a href="https://drive.google.com/file/d/1cEIEzX1DQd370EdXrFGFSW6cRKD0Rg7G/view?usp=sharing" download="hamza_resume.pdf"
+                    <a href="https://drive.google.com/file/d/1cEIEzX1DQd370EdXrFGFSW6cRKD0Rg7G/view?usp=sharing" download="python.pdf"
                         class="btn btn-primary downloadBtn">Look here <i class="fa fa-download" aria-hidden="true"></i></a>
                 </div>
 
@@ -200,7 +200,7 @@
                     class="col-sm-10 col-md-10 col-lg-3 col-xl-3 offerType shadow p-3 mb-5 bg-white rounded">
                     <img id="offerImg" src="images/about/np.png">
                     <h5 id="offerName">INTERNET OF THINGS (IOT)</h5>
-                    <a href="https://drive.google.com/file/d/1C0XA0MiJm4XtBvetJiyzFpYnOE2Mv3Q_/view?usp=sharing" download="hamza_resume.pdf"
+                    <a href="https://drive.google.com/file/d/1C0XA0MiJm4XtBvetJiyzFpYnOE2Mv3Q_/view?usp=sharing" download="iot.pdf"
                     class="btn btn-primary downloadBtn">Look here <i class="fa fa-download" aria-hidden="true"></i></a>
                 </div>
 
