--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <title>its me sunil pratap </title>
+    <title>sunil pratap's portfolio</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="images/siteIcon/icon.png" type="image/icon type">
 
