--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                         <p class="emailText" id="repoDesc"> bathinasunilpratap6699@gmail.com</p>
                     </div>
                 </a>
-                <a data-aos="fade-down" data-aos-delay="1000"
+                <a href="https://www.linkedin.com/in/sunilpratap-bathina-89302b229/" data-aos="fade-down" data-aos-delay="1000"
                     class="repoLink col-12 col-sm-8 col-md-8 col-lg-4 col-xl-2">
                     <div class="repo contactType">
                         <i id="contactIcon" class="fa fa-envelope fa-4x" aria-hidden="true"></i>
