--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                     </div>
                 </a>
 
-                <a href="bathinasunilpratap6699@gmail.com" data-aos="fade-down" data-aos-delay="1000"
+                <a href="mailto:bathinasunilpratap6699@gmail.com" data-aos="fade-down" data-aos-delay="1000"
                     class="repoLink col-12 col-sm-8 col-md-8 col-lg-4 col-xl-2">
                     <div class="repo contactType">
                         <i id="contactIcon" class="fa fa-envelope fa-4x" aria-hidden="true"></i>
